welcome.lessons.welcome.bat.bool2.TeaParty.scala.error
teaParty:10: error: type mismatch;
 found   : Unit
 required: Int
}else if(tea>p || candy>s ){
      ^